# ChangeLog for dev-libs/libusb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.81 2008/06/25 03:25:44 robbat2 Exp $

*libusb-0.1.12-r4 (25 Jun 2008)

  25 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/libusb-0.1.12-no-infinite-bulk.patch, +libusb-0.1.12-r4.ebuild:
  Bug #225879, fix infinite looping during usb_bulk operations.

*libusb-0.1.12-r3 (07 Jun 2008)

  07 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +libusb-0.1.12-r3.ebuild:
  Make the CXX support optional, but not removed by default, per bug
  #175117.

*libusb-0.1.12-r2 (11 May 2008)

  11 May 2008; <solar@gentoo.org> +files/libusb-0.1.12-nocpp.patch,
  +libusb-0.1.12-r2.ebuild:
  - snag cross compile fix from buildroot

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r1.ebuild:
  Fixup autotools #213800 by Alessandro Guido.

  06 Oct 2007; Tom Gall <tgall@gentoo.org> libusb-0.1.12-r1.ebuild:
  stable on ppc64 bug #193891

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on amd64 wrt bug #193891

  28 Sep 2007; nixnut <nixnut@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on ppc wrt bug 193891

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on mips, per #193891.

  27 Sep 2007; Jeroen Roovers <jer@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable for HPPA (bug #193891).

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> libusb-0.1.12-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #193891

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  12 May 2007; Joshua Kinard <kumba@gentoo.org> libusb-0.1.12.ebuild:
  Stable on mips.

  11 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
  libusb-0.1.12.ebuild, libusb-0.1.12-r1.ebuild:
  Fix documentation build process. Add myself to metadata.xml
