@@ -6,5 +6,6 @@ EBUILD libusb-0.1.12-r1.ebuild 1789 RMD160 21f74355391130e02aa35ca95da72f37435f0
 EBUILD libusb-0.1.12-r2.ebuild 1835 RMD160 d1ee44aaf43cded04bed9058a88b4239bb016d61 SHA1 7d70b9278f1065e8a2603d41751ad206d4722bf7 SHA256 9f5c8fa59c95d056b0fb54f72c52ee82e37212887d93364d92d73c0291209d61
 EBUILD libusb-0.1.12-r3.ebuild 1920 RMD160 49144510857e2fc518137cf9177d9080a0337f73 SHA1 3b2d9566328dd71b024c41c3a80d449f1ed947be SHA256 ecb2f418317f646233af3a0accf9a5204cc78d8c71f6e6cf467142a8933b0226
 EBUILD libusb-0.1.12-r4.ebuild 1977 RMD160 3540dabf4efe24e13788a156d916612a2eb84d29 SHA1 3f1cfda77e0bb683d00b4542ff7206ea587ec916 SHA256 098a3f02b88378fe9e5c9c1fcc1034b450c21f82a1206167d0b86d47312cb827
-MISC ChangeLog 10106 RMD160 2d3aca5f43470b6fa43ca46de2202cf6b2ee701f SHA1 e2bd8f2d9340b40125225f231869f1d618f5bff2 SHA256 f6fd6576f77c62d8b4b7055071f7a544793353ba5c3c1a60ea7feadb1706ee0b
+EBUILD libusb-0.1.12-r5.ebuild 1665 RMD160 58f37643d6e6e33de0d72857e27c507c93db6f49 SHA1 67576ef0e52e2de9c303c2e213a7be004ce938a4 SHA256 a0d9ac6f03fd8655d1209ea990d73be12f0e9d3addd9d5c2415c1f9538d93fc9
+MISC ChangeLog 10410 RMD160 db0523d6b7b418afbcd0ae60aef621eb85bd0231 SHA1 5e7824fec7b75ca043ecbf7fa0e94b2c8ebe2aee SHA256 0072d7a6e4387ee102231d36d986a569b34f8994c806ac8da1f388b789bf2137
 MISC metadata.xml 226 RMD160 648b1f4c4f30d91596a8bb5ee6713abbe558d1ee SHA1 454eb537623437bf8d58ae3cd0418e6a898bac61 SHA256 32bd7ea3d52eaade1cad03a261cd0f75ae3b0d10787fe646ece11c752b1cdfd2
